--- a/sprint 1_2/styles.scss
+++ b/sprint 1_2/styles.scss
@@ -45,11 +45,12 @@ body{
       }
    }
    
-.container.nav{
+.navbar.navbar-expand-lg{
 
    .nav-item{
-      .nav-link.active{
+      .nav-link{
          color: black;
+         text-transform: uppercase;
 
       }
    .nav-link{
@@ -163,21 +164,27 @@ header{
    }
 }
 
-.accordion-item {
-   border: none;
-}
 
-.accordion-header {
+
+.row.accordion {
+   
    display: flex;
    align-items: center;
    justify-content: space-between;
-   border-bottom: 1px solid $grey; 
    padding: 10px;
    cursor: pointer; 
+   .accordion-item {
+      border: none;
+      border-bottom: 1px solid #cccccc; /* замените #cccccc на ваш цвет */
+   }
 }
 
-
-
+.nav.nav-tabs{
+   
+   .nav-link{
+      border: none
+   }
+}
 
 
 
